Bug 480188 - Color selector Crash
Summary: Color selector Crash
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: * Unknown (other bugs)
Version First Reported In: 5.2.2
Platform: Other Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 480384 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-22 21:08 UTC by ZeroFrost
Modified: 2024-01-27 10:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Last two Crashes are Color selector crashes that this report focuses on. (472.12 KB, text/plain)
2024-01-22 21:08 UTC, ZeroFrost
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ZeroFrost 2024-01-22 21:08:33 UTC
Created attachment 165138 [details]
Last two Crashes are Color selector crashes that this report focuses on.

SUMMARY
***
In the span of the month Krita Crashed two times When using collor selector. No idea why exactly.
I dont remeber Krita ever crashed like that before 5.2.2.
***


STEPS TO REPRODUCE
1. Use Ctrl To Collor pick collor.

OBSERVED RESULT
Hard crash. 

EXPECTED RESULT
Not Crash.

SOFTWARE/OS VERSIONS
WARNING: The Krita usage log file doesn't exist.File name and location: C:/Users/zerof/AppData/Local/krita.log------------------------------------

Krita
  Version: 5.2.0

Qt
  Version (compiled): 5.15.7
  Version (loaded): 5.15.7

OS Information
  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.19045
  Pretty Productname: Windows 10 Version 2009
  Product Type: windows
  Product Version: 10


OpenGL Info
 
  Vendor:  "Google Inc. (NVIDIA)" 
  Renderer:  "ANGLE (NVIDIA, NVIDIA GeForce RTX 4060 Ti Direct3D11 vs_5_0 ps_5_0, D3D11-31.0.15.4633)" 
  Driver version:  "OpenGL ES 3.0.0 (ANGLE 2.1.0 git hash: f2280c0c5f93+krita_qt5)" 
  Shading language:  "OpenGL ES GLSL ES 3.00 (ANGLE 2.1.0 git hash: f2280c0c5f93+krita_qt5)" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
  Current format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DefaultSwapBehavior, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::NoProfile) 
  GL version: 3.0 
  Supports deprecated functions false 
  Is OpenGL ES: true 
  supportsBufferMapping: true 
  supportsBufferInvalidation: false 
  forceDisableTextureBuffers: true 
  Extensions: 
     GL_EXT_float_blend 
     GL_EXT_draw_elements_base_vertex 
     GL_ANGLE_base_vertex_base_instance_shader_builtin 
     GL_CHROMIUM_copy_texture 
     GL_ANGLE_client_arrays 
     GL_ANGLE_lossy_etc_decode 
     GL_ANGLE_translated_shader_source 
     GL_ANGLE_framebuffer_blit 
     GL_OES_EGL_image_external 
     GL_EXT_debug_marker 
     GL_EXT_texture_rg 
     GL_OES_compressed_ETC2_sRGB8_alpha8_texture 
     GL_ANGLE_pack_reverse_row_order 
     GL_EXT_unpack_subimage 
     GL_NV_EGL_stream_consumer_external 
     GL_NV_fence 
     GL_EXT_multisampled_render_to_texture 
     GL_EXT_texture_storage 
     GL_ANGLE_instanced_arrays 
     GL_OES_packed_depth_stencil 
     GL_CHROMIUM_bind_uniform_location 
     GL_OES_texture_npot 
     GL_CHROMIUM_copy_compressed_texture 
     GL_OES_standard_derivatives 
     GL_EXT_texture_norm16 
     GL_OES_compressed_EAC_RG11_unsigned_texture 
     GL_ANGLE_request_extension 
     GL_ANGLE_texture_compression_dxt5 
     GL_ANGLE_base_vertex_base_instance 
     GL_ANGLE_texture_multisample 
     GL_EXT_texture_compression_s3tc_srgb 
     GL_OVR_multiview2 
     GL_OES_rgb8_rgba8 
     GL_EXT_draw_buffers_indexed 
     GL_ANGLE_multi_draw 
     GL_NV_pixel_buffer_object 
     GL_OES_EGL_image 
     GL_EXT_texture_type_2_10_10_10_REV 
     GL_EXT_clip_control 
     GL_OES_EGL_image_external_essl3 
     GL_OES_texture_half_float 
     GL_OES_vertex_array_object 
     GL_OES_fbo_render_mipmap 
     GL_EXT_texture_compression_rgtc 
     GL_EXT_texture_compression_bptc 
     GL_OVR_multiview 
     GL_WEBGL_video_texture 
     GL_KHR_parallel_shader_compile 
     GL_ANGLE_memory_size 
     GL_OES_compressed_ETC2_sRGB8_texture 
     GL_OES_surfaceless_context 
     GL_OES_compressed_EAC_R11_unsigned_texture 
     GL_ANGLE_framebuffer_multisample 
     GL_ANGLE_provoking_vertex 
     GL_OES_draw_elements_base_vertex 
     GL_ANGLE_program_cache_control 
     GL_NV_framebuffer_blit 
     GL_OES_mapbuffer 
     GL_ANGLE_get_serialized_context_string 
     GL_EXT_draw_buffers 
     GL_CHROMIUM_lose_context 
     GL_OES_texture_half_float_linear 
     GL_NV_pack_subimage 
     GL_EXT_robustness 
     GL_OES_compressed_ETC2_RGBA8_texture 
     GL_OES_compressed_EAC_R11_signed_texture 
     GL_EXT_shader_texture_lod 
     GL_EXT_texture_format_BGRA8888 
     GL_ANGLE_depth_texture 
     GL_EXT_color_buffer_half_float 
     GL_CHROMIUM_bind_generates_resource 
     GL_EXT_sRGB 
     GL_AMD_performance_monitor 
     GL_EXT_frag_depth 
     GL_EXT_debug_label 
     GL_OES_texture_stencil8 
     GL_OES_compressed_EAC_RG11_signed_texture 
     GL_EXT_read_format_bgra 
     GL_OES_compressed_ETC2_RGB8_texture 
     GL_OES_get_program_binary 
     GL_OES_texture_float 
     GL_EXT_disjoint_timer_query 
     GL_EXT_texture_compression_dxt1 
     GL_OES_compressed_ETC2_punchthroughA_RGBA8_texture 
     GL_ANGLE_get_tex_level_parameter 
     GL_OES_compressed_ETC2_punchthroughA_sRGB8_alpha_texture 
     GL_EXT_blend_minmax 
     GL_EXT_occlusion_query_boolean 
     GL_ANGLE_texture_usage 
     GL_EXT_EGL_image_external_wrap_modes 
     GL_EXT_discard_framebuffer 
     GL_OES_texture_float_linear 
     GL_ANGLE_texture_compression_dxt3 
     GL_EXT_blend_func_extended 
     GL_EXT_color_buffer_float 
     GL_ANGLE_copy_texture_3d 
     GL_EXT_texture_filter_anisotropic 
     GL_OES_depth24 
     GL_ANGLE_multiview_multisample 
     GL_EXT_map_buffer_range 
     GL_OES_draw_buffers_indexed 
     GL_EXT_instanced_arrays 
     GL_EXT_multi_draw_indirect 
     GL_KHR_debug 
     GL_OES_depth32 
     GL_OES_texture_border_clamp 
     GL_CHROMIUM_sync_query 
     GL_ANGLE_robust_client_memory 
     GL_OES_element_index_uint 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: true 
  Detected renderers: 
    (Supported) ANGLE (NVIDIA, NVIDIA GeForce RTX 4060 Ti Direct3D11 vs_5_0 ps_5_0, D3D11-31.0.15.4633) (OpenGL ES 3.0.0 (ANGLE 2.1.0 git hash: f2280c0c5f93+krita_qt5)) 
    (Supported) ANGLE (Microsoft, Microsoft Basic Render Driver Direct3D11 vs_5_0 ps_5_0, D3D11-10.0.19041.3636) (OpenGL ES 3.0.0 (ANGLE 2.1.0 git hash: f2280c0c5f93+krita_qt5)) 
    (Supported) NVIDIA GeForce RTX 4060 Ti/PCIe/SSE2 (4.6.0 NVIDIA 546.33)  

Hardware Information
 Memory: 31 Gb
 Cores: 12
 Swap: C:/Users/zerof/AppData/Local/Temp

ADDITIONAL INFORMATION
Comment 1 Lynx3d 2024-01-23 15:31:19 UTC
Git commit 0f59d7a97b0985299da94947fb825d5cd36476e3 by Mathias Wein.
Committed on 23/01/2024 at 16:27.
Pushed by mwein into branch 'master'.

Properly check color patch index for validity

The first model item is a dummy that is covered by a UI button, but
mouse release event can happen anywhere on screen.

M  +1    -1    plugins/dockers/advancedcolorselector/KisColorPatchesTableView.cpp

https://invent.kde.org/graphics/krita/-/commit/0f59d7a97b0985299da94947fb825d5cd36476e3
Comment 2 Lynx3d 2024-01-23 18:32:20 UTC
Git commit ac6654cdcc6aeca7f71f7632fa75bc260ad37cf5 by Mathias Wein.
Committed on 23/01/2024 at 19:32.
Pushed by mwein into branch 'krita/5.2'.

Properly check color patch index for validity

The first model item is a dummy that is covered by a UI button, but
mouse release event can happen anywhere on screen.


(cherry picked from commit 0f59d7a97b0985299da94947fb825d5cd36476e3)

M  +1    -1    plugins/dockers/advancedcolorselector/KisColorPatchesTableView.cpp

https://invent.kde.org/graphics/krita/-/commit/ac6654cdcc6aeca7f71f7632fa75bc260ad37cf5
Comment 3 wolthera 2024-01-27 10:42:51 UTC
*** Bug 480384 has been marked as a duplicate of this bug. ***