Properly check color patch index for validity

The first model item is a dummy that is covered by a UI button, but
mouse release event can happen anywhere on screen.

BUG:480188